implemented baseline profile page
